[metadata]
name = nxml
version = attr: nxml.__version__
author =  EungGu Yun
author_email = yuneg11@gmail.com
description = NXML is an eXtension for Machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuneg11/nxml
project_urls =
    Documentation = https://yuneg11.github.io/NXML
    Source = https://github.com/yuneg11/nxml
    Tracker = https://github.com/yuneg11/nxml/issues
license = MIT license
licens_files = LICENSE
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords = nxml, NXML

[options]
packages = find:
package_dir =
    nxcl = nxml
python_requires = >=3.7
install_requires =
    eagerpy >= 0.30
setup_requires =
    build
    setuptools
zip_safe = True
